--- a/RIDA/index.html
+++ b/RIDA/index.html
@@ -32,6 +32,8 @@
 
             <button class="boton"> Conoce más</button>
         
+    gjshfhhkdfhdfs
+
 
             hola probando sisisi cambios
        
