--- a/RIDA/index.html
+++ b/RIDA/index.html
@@ -36,6 +36,7 @@
             probando codigo remoto en la laptop
     
     </body>
+borre codigo y volvi a escribir en la mac
 
     escribi algo en la mac
 
