--- a/RIDA/index.html
+++ b/RIDA/index.html
@@ -21,7 +21,7 @@
         <ul>
             <li><a href="">Inicio</a></li>
             <li><a href="">Nosotros</a></li>
-            <li><a href="">Nuestros Serviciosaaaa</a></li>
+            <li><a href="">Nuestros Servicios</a></li>
             <li><a href="">Productos</a></li>
             <li><a href="">Contáctanos</a></li>
         </ul>
